--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -8,13 +8,17 @@
   padding: 0;
 }
 
-.page-container{
+.sidebar>* {
+  margin-bottom: 20px;
+}
+
+.page-container {
   height: 100%;
   width: 100%;
   position: absolute;
 }
 
-.main-container{
+.main-container {
   min-height: 100%;
   display: flex;
   flex-direction: column;
