--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -26,6 +26,20 @@
     font-size: 1rem;
 }
 
+.author{
+    padding: 20px;
+    font-size: 1rem;
+    text-align: end;
+}
+
+.author *{
+    color: #fff;
+}
+
+.avatar{
+    margin: 1px;
+}
+
 #hitokoto {
     margin-top: auto;
     margin-bottom: auto;
