--- a/src/assets/scss/globalStyle.scss
+++ b/src/assets/scss/globalStyle.scss
@@ -3,6 +3,15 @@ body {
     padding: 0;
 }
 
+.icon {
+    padding-left:5px;
+    padding-right: 5px;
+}
+
+.icon-sidebar{
+    padding-left: 0;
+}
+
 $banner-height: 100px;
 $banner-color: #66ccff;
 
